--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(180deg, $third 0%, $primary 100%);
 }
 
 .wrap {
