--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -13,7 +13,7 @@
   align-items: center;
   align-self: center;
   width: 100%;
-  max-width: 1280px;
+  max-width: 1115px;
   padding: 73px 0;
 }
 
@@ -22,6 +22,11 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-right: -30px;
+}
+
+.filtersWrap {
+  align-self: flex-start;
+  margin-bottom: 20px;
 }
 
 .title {
